Let Qt render text thumbnails

We used a tiny bitmapped font which was unfortunately lacking any
non ASCII characters. We now detect non ASCII files as text files,
so we should render them better.

This code uses the smallest readable font, but currently forces it
to a very small pixel size (similar to what the old code used).

The text encoding detection might need some improvements, e.g. use
the default locale encoding, when the prober is not very sure.

Reviewed by Peter Penz
Reviewed by Darío Andrés

See http://reviewboard.kde.org/r/760/

BUG: 169381
CCBUG: 188355

svn path=/trunk/KDE/kdebase/runtime/; revision=990397